tests/errors/operation_03/operation_03.bxml
<?xml version="1.0" encoding="UTF-8" ?>
<Machine xmlns='https://www.atelierb.eu/Formats/bxml' version='1.0' name='operation_03' type='abstraction' position='false' semantic='true' b0check='false'>
    <Initialisation>
        <Skip/>
    </Initialisation>
    <Operations>
        <Operation name='return_true'>
            <Output_Parameters>
                <Id value='boolean' typref='0'/>
            </Output_Parameters>
            <Precondition>
                <Nary_Pred op='or'>
                    <Nary_Pred op='&amp;'>
                        <Exp_Comparison op='='>
                            <Integer_Literal value='1' typref='1'/>
                            <Integer_Literal value='1' typref='1'/>
                        </Exp_Comparison>
                        <Exp_Comparison op='='>
                            <Integer_Literal value='2' typref='1'/>
                            <Integer_Literal value='2' typref='1'/>
                        </Exp_Comparison>
                    </Nary_Pred>
                    <Exp_Comparison op='='>
                        <Integer_Literal value='3' typref='1'/>
                        <Integer_Literal value='3' typref='1'/>
                    </Exp_Comparison>
                </Nary_Pred>
            </Precondition>
            <Body>
                <Assignement_Sub>
                    <Variables>
                        <Id value='boolean' typref='0'/>
                    </Variables>
                    <Values>
                        <Boolean_Literal value='TRUE' typref='0'/>
                    </Values>
                </Assignement_Sub>
            </Body>
        </Operation>
    </Operations>
    <TypeInfos>
<Type id='0'>
<Id value='BOOL'/>
</Type>
<Type id='1'>
<Id value='INTEGER'/>
</Type>
<Type id='2'>
<Unary_Exp op='POW'>
<Id value='INTEGER'/>
</Unary_Exp>
</Type>
<Type id='3'>
<Unary_Exp op='POW'>
<Unary_Exp op='POW'>
<Id value='INTEGER'/>
</Unary_Exp>
</Unary_Exp>
</Type>
</TypeInfos>
    
</Machine>